--- a/weather app/View/Base.lproj/Main.storyboard
+++ b/weather app/View/Base.lproj/Main.storyboard
@@ -28,7 +28,12 @@
                                             <constraint firstAttribute="height" constant="40" id="O1t-Ta-MUk"/>
                                             <constraint firstAttribute="width" constant="40" id="vuZ-Nd-pHw"/>
                                         </constraints>
-                                        <state key="normal" image="location.circle.fill" catalog="system"/>
+                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <state key="normal" image="location.circle.fill" catalog="system">
+                                            <color key="titleColor" red="0.1158496399" green="0.19108899109999999" blue="0.1380307643" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleShadowColor" red="0.86274509799999999" green="0.98039215690000003" blue="0.92156862750000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="32" weight="light"/>
+                                        </state>
                                         <connections>
                                             <action selector="checkLocation:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QVI-4d-Ikn"/>
                                         </connections>
@@ -47,8 +52,11 @@
                                             <constraint firstAttribute="width" constant="40" id="FfI-9q-VOG"/>
                                             <constraint firstAttribute="height" constant="40" id="I3b-FM-PDo"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" image="magnifyingglass" catalog="system">
-                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="semibold"/>
+                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="32" weight="semibold"/>
                                         </state>
                                         <connections>
                                             <action selector="searchPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="u8V-RU-8mq"/>
